--- a/Code/WorkSpeed.DesktopClient/packages.config
+++ b/Code/WorkSpeed.DesktopClient/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.0.1" targetFramework="net471" />
+  <package id="Xceed.Products.Wpf.Toolkit.Base" version="3.8.19076.18510" targetFramework="net471" />
+  <package id="Xceed.Wpf.Toolkit" version="3.8.19076.18510" targetFramework="net471" />
 </packages>
