--- a/Code/WorkSpeed.Business/WorkSpeed.Business.csproj
+++ b/Code/WorkSpeed.Business/WorkSpeed.Business.csproj
@@ -130,27 +130,22 @@
     <Compile Include="Contexts\Productivity\ActionDetails\TimeActionDetails.cs" />
     <Compile Include="Contexts\Productivity\ActionDetails\WithProductActionDetails.cs" />
     <Compile Include="Contexts\Productivity\ActionDetails\WithScansActionDetails.cs" />
-    <Compile Include="Contexts\Productivity\BreakRepository.cs" />
-    <Compile Include="Contexts\Productivity\Builders\WithProductProductivityBuilder.cs" />
-    <Compile Include="Contexts\Productivity\Builders\InventoryProductivityBuilder.cs" />
-    <Compile Include="Contexts\Productivity\Builders\IProductivityBuilder.cs" />
-    <Compile Include="Contexts\Productivity\Builders\OtherProductivityBuilder.cs" />
-    <Compile Include="Contexts\Productivity\Builders\ProductivityBuilder.cs" />
-    <Compile Include="Contexts\Productivity\Builders\ReceptionProductivityBuilder.cs" />
-    <Compile Include="Contexts\Productivity\Builders\ShipmentProductivityBuilder.cs" />
-    <Compile Include="Contexts\Productivity\CategoryFilter.cs" />
+    <Compile Include="Contexts\Past\BreakRepository.cs" />
+    <Compile Include="Contexts\Productivity\IProductivityBuilder.cs" />
+    <Compile Include="Contexts\Productivity\ProductivityBuilder.cs" />
+    <Compile Include="Contexts\Past\CategoryFilter.cs" />
     <Compile Include="Contexts\Productivity\Comparers\DayPeriodEqualityComparer.cs" />
-    <Compile Include="Contexts\Productivity\DayPeriod.cs" />
-    <Compile Include="Contexts\Productivity\FactoryEmployeeAction.cs" />
-    <Compile Include="Contexts\Productivity\IBreakRepository.cs" />
-    <Compile Include="Contexts\Productivity\ICategoryFilter.cs" />
-    <Compile Include="Contexts\Productivity\IFactoryEmployeeAction.cs" />
-    <Compile Include="Contexts\Productivity\IPauseBetweenActions.cs" />
-    <Compile Include="Contexts\Productivity\ModelExtensions.cs" />
-    <Compile Include="Contexts\Productivity\PauseBetweenActions.cs" />
+    <Compile Include="Contexts\Past\DayPeriod.cs" />
+    <Compile Include="Contexts\Past\FactoryEmployeeAction.cs" />
+    <Compile Include="Contexts\Past\IBreakRepository.cs" />
+    <Compile Include="Contexts\Past\ICategoryFilter.cs" />
+    <Compile Include="Contexts\Past\IFactoryEmployeeAction.cs" />
+    <Compile Include="Contexts\Past\IPauseBetweenActions.cs" />
+    <Compile Include="Contexts\Productivity\DataModelExtensions.cs" />
+    <Compile Include="Contexts\Past\PauseBetweenActions.cs" />
     <Compile Include="Contexts\Productivity\Period.cs" />
-    <Compile Include="Contexts\Productivity\Models\Productivity.cs" />
-    <Compile Include="Contexts\Productivity\RepositoryEmployeeAction.cs" />
+    <Compile Include="Contexts\Productivity\Productivity.cs" />
+    <Compile Include="Contexts\Past\RepositoryEmployeeAction.cs" />
     <Compile Include="Contexts\ReportService.cs" />
     <Compile Include="FileModels\EmployeeShortImportModel.cs" />
     <Compile Include="FileModels\OtherActionImportModel.cs" />
@@ -200,13 +195,13 @@
     <Compile Include="Models\PositionGrouping.cs" />
     <Compile Include="Contexts\Productivity\Models\EmployeeProductivity.cs" />
     <Compile Include="Contexts\Productivity\Models\GatheringProductivity.cs" />
-    <Compile Include="Contexts\Productivity\IProductivity.cs" />
+    <Compile Include="Contexts\Productivity\Models\IProductivity.cs" />
     <Compile Include="Contexts\Productivity\Models\IEmployeeProductivity.cs" />
     <Compile Include="Contexts\Productivity\Models\ReceptionProductivity.cs" />
     <Compile Include="Models\ShiftGrouping.cs" />
     <Compile Include="Models\OperationThresholds.cs" />
-    <Compile Include="Contexts\Productivity\AddTimeOptions.cs" />
-    <Compile Include="Contexts\Productivity\Builders\IProductivityCalculator.cs" />
+    <Compile Include="Contexts\Past\AddTimeOptions.cs" />
+    <Compile Include="Contexts\Productivity\IProductivityCalculator.cs" />
     <Compile Include="Contexts\Productivity\Models\Productivity2.cs" />
     <Compile Include="Models\ActionModels\ProductMgh.cs" />
     <Compile Include="FileModels\ActionImportModel.cs" />
@@ -219,8 +214,8 @@
     <Compile Include="FileModels\ShipmentImportModel.cs" />
     <Compile Include="IWarehouse.cs" />
     <Compile Include="Interfaces\IWarehouseEntities.cs" />
-    <Compile Include="Contexts\Productivity\ProductivityCalculator.cs" />
-    <Compile Include="Contexts\Productivity\ProductivityObservableCollection.cs" />
+    <Compile Include="Contexts\Past\ProductivityCalculator.cs" />
+    <Compile Include="Contexts\Past\ProductivityObservableCollection.cs" />
     <Compile Include="ProductivityIndicatorsModels\CargoIndicators.cs" />
     <Compile Include="ProductivityIndicatorsModels\CompositeQuantityIndicators.cs" />
     <Compile Include="ProductivityIndicatorsModels\GatheringIndicators.cs" />
@@ -257,7 +252,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Contexts\Exceptions\" />
-    <Folder Include="Models\Productivity\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
