--- a/Code/WorkSpeed.Business/WorkSpeed.Business.csproj
+++ b/Code/WorkSpeed.Business/WorkSpeed.Business.csproj
@@ -160,9 +160,9 @@
     <Compile Include="Models\ActionModels\ImportedProduct.cs" />
     <Compile Include="Models\ActionModels\ImportedReceptionActionDetails.cs" />
     <Compile Include="Models\ActionModels\ImportedShipmentActionDetails.cs" />
-    <Compile Include="ActionData.cs" />
-    <Compile Include="BreakConstraintsForNotSmokers.cs" />
-    <Compile Include="BreakConstraintsForSmokers.cs" />
+    <Compile Include="Contexts\Past\ActionData.cs" />
+    <Compile Include="Contexts\Past\BreakConstraintsForNotSmokers.cs" />
+    <Compile Include="Contexts\Past\BreakConstraintsForSmokers.cs" />
     <Compile Include="Contexts\Contracts\IImportService.cs" />
     <Compile Include="Contexts\Contracts\IService.cs" />
     <Compile Include="Contexts\ImportService.cs" />
@@ -170,15 +170,14 @@
     <Compile Include="Contexts\Contracts\IWorkSpeedBusinessContext.cs" />
     <Compile Include="Contexts\ProductivityService.cs" />
     <Compile Include="Contexts\Service.cs" />
-    <Compile Include="Contexts\WarehouseService.cs" />
+    <Compile Include="Contexts\Past\WarehouseService.cs" />
     <Compile Include="Contexts\WorkSpeedBusinessContextCreator.cs" />
-    <Compile Include="CategoryConstraints.cs" />
+    <Compile Include="Contexts\Past\CategoryConstraints.cs" />
     <Compile Include="Constraints\BreakConstraints.cs" />
     <Compile Include="Constraints\DefaultCategoryConstraints.cs" />
     <Compile Include="Constraints\DefaultTimeConstraints.cs" />
     <Compile Include="Constraints\ITimeConstraints.cs" />
     <Compile Include="Constraints\ITimeConstraintFactory.cs" />
-    <Compile Include="DayPeriod.cs" />
     <Compile Include="Contexts\TypeRepositoryExtensions.cs" />
     <Compile Include="FileModels\Comparers\ActionImportModelComparer.cs" />
     <Compile Include="Constraints\IBreakConstraints.cs" />
@@ -212,7 +211,7 @@
     <Compile Include="FileModels\ProductivityImportModel.cs" />
     <Compile Include="FileModels\ReceptionImportModel.cs" />
     <Compile Include="FileModels\ShipmentImportModel.cs" />
-    <Compile Include="IWarehouse.cs" />
+    <Compile Include="Contexts\Past\IWarehouse.cs" />
     <Compile Include="Interfaces\IWarehouseEntities.cs" />
     <Compile Include="Contexts\Past\ProductivityCalculator.cs" />
     <Compile Include="Contexts\Past\ProductivityObservableCollection.cs" />
@@ -229,8 +228,8 @@
     <Compile Include="ProductivityIndicatorsModels\VolumeIndicators.cs" />
     <Compile Include="ProductivityIndicatorsModels\WeightIndicators.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Warehouse.cs" />
-    <Compile Include="WarehouseEntities.cs" />
+    <Compile Include="Contexts\Past\Warehouse.cs" />
+    <Compile Include="Contexts\Past\WarehouseEntities.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Agbm.Tools\Code\Agbm.Helpers\Agbm.Helpers.csproj">
@@ -248,6 +247,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
