--- a/Tests/WorkSpeed.Business.Tests/WorkSpeed.Business.Tests.csproj
+++ b/Tests/WorkSpeed.Business.Tests/WorkSpeed.Business.Tests.csproj
@@ -161,8 +161,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contexts\Productivity\UnitTests\DataModelExtensionTests.cs" />
     <Compile Include="Contexts\Productivity\UnitTests\ProductivityBuilderTests.cs" />
     <Compile Include="Contexts\Productivity\UnitTests\ProductivityTests.cs" />
+    <Compile Include="Contexts\Productivity\UnitTests\ShortBreakInspectorTests.cs" />
     <Compile Include="Contexts\UnitTests\ImportServiceTests.cs" />
     <Compile Include="Contexts\UnitTests\ReportServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
