--- a/Code/WorkSpeed.DesktopClient/WorkSpeed.DesktopClient.csproj
+++ b/Code/WorkSpeed.DesktopClient/WorkSpeed.DesktopClient.csproj
@@ -125,6 +125,9 @@
     <Compile Include="Views\ReportService\Entities\EmployeeView.xaml.cs">
       <DependentUpon>EmployeeView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\ReportService\Entities\ReadOnlyEmployeeView.xaml.cs">
+      <DependentUpon>ReadOnlyEmployeeView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\ReportService\Productivity\EmployeeProductivityView.xaml.cs">
       <DependentUpon>EmployeeProductivityView.xaml</DependentUpon>
     </Compile>
@@ -265,6 +268,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Dialogs\ErrorWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ReportService\Entities\ReadOnlyEmployeeView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
