--- a/Tests/WorkSpeed.Business.Tests/WorkSpeed.Business.Tests.csproj
+++ b/Tests/WorkSpeed.Business.Tests/WorkSpeed.Business.Tests.csproj
@@ -38,6 +38,9 @@
     <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Castle.Core.4.3.1\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
+    <Reference Include="ICSharpCode.SharpZipLib, Version=1.1.0.145, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\SharpZipLib.1.1.0\lib\net45\ICSharpCode.SharpZipLib.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Data.Sqlite, Version=2.2.1.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Microsoft.Data.Sqlite.Core.2.2.1\lib\netstandard2.0\Microsoft.Data.Sqlite.dll</HintPath>
     </Reference>
@@ -161,6 +164,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contexts\IntegrationTests\ReportServiceTests.cs" />
+    <Compile Include="Contexts\IntegrationTests\TestImportModel.cs" />
     <Compile Include="Contexts\Productivity\UnitTests\PeriodTests.cs" />
     <Compile Include="Contexts\Productivity\UnitTests\ProductivityBuilderTests.cs" />
     <Compile Include="Contexts\Productivity\UnitTests\ProductivityTests.cs" />
@@ -170,6 +175,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Agbm.Tools\Code\Agbm.Helpers\Agbm.Helpers.csproj">
+      <Project>{12faa7bd-a5d4-48e3-80c4-6d7a72be99b0}</Project>
+      <Name>Agbm.Helpers</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Agbm.Tools\Code\Agbm.NpoiExcel\Agbm.NpoiExcel.csproj">
       <Project>{47680bf8-c76a-44b9-bde3-694f1a73ccb1}</Project>
       <Name>Agbm.NpoiExcel</Name>
@@ -185,6 +194,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Contexts\IntegrationTests\test.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
