--- a/Tests/WorkSpeed.Business.Tests/packages.config
+++ b/Tests/WorkSpeed.Business.Tests/packages.config
@@ -25,6 +25,7 @@
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net471" />
   <package id="NUnit" version="3.11.0" targetFramework="net471" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net471" />
+  <package id="SharpZipLib" version="1.1.0" targetFramework="net471" />
   <package id="SQLitePCLRaw.bundle_green" version="1.1.13" targetFramework="net471" />
   <package id="SQLitePCLRaw.core" version="1.1.13" targetFramework="net471" />
   <package id="SQLitePCLRaw.lib.e_sqlite3.linux" version="1.1.13" targetFramework="net471" />
