--- a/Tests/WorkSpeed.Tests/WorkSpeed.Tests.csproj
+++ b/Tests/WorkSpeed.Tests/WorkSpeed.Tests.csproj
@@ -88,7 +88,7 @@
       <Project>{61c2a155-2641-4617-826e-82911531837a}</Project>
       <Name>WorkSpeed.Productivity</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Code\WorkSpeed\WorkSpeed.csproj">
+    <ProjectReference Include="..\..\Code\WorkSpeed.Business\WorkSpeed.Business.csproj">
       <Project>{035d995a-6f8a-47c1-aebd-41b2cc5d6d7d}</Project>
       <Name>WorkSpeed</Name>
     </ProjectReference>
